Fix collapsible arrows and column spacing.

--- a/src/components/activity-page/section.scss
+++ b/src/components/activity-page/section.scss
@@ -196,7 +196,7 @@
     top: 0;
     z-index: 3;
 
-    &.right {
+    &.left {
       justify-content: flex-start;
     }
 
